  memory accesses.

Performance improvements:
- Better code generated for "&&" and "||" operators.
- More aggressive elimination of conditional branches during constant
  propagation, taking better advantage of inferred constants.

Internal simplifications:
- Clight, Csharpminor, Cminor: suppressed the "Econdition" conditional
  expressions, no longer useful.
- Cminor: suppressed the "Oboolval" and "Onotbool" operators,
  which can be expressed in terms of "Ocmpu" at no performance costs.

Other changes:
- IA32/MacOS X: now supports referencing global variables defined in shared
  libraries; old hack for stdio is no longer needed.
- PowerPC/MacOS X: this port was removed, as recent version of MacOS X
  no longer support PowerPC.


Release 1.11, 2012-07-13
========================

Improvements in confidence:
- Floating-point numbers and arithmetic operations, previously axiomatized,
  are now implemented and proved correct in Coq, using the Flocq library
  of S. Boldo and G. Melquiond.

Language semantics:
- In accordance with ISO C standards, the signed division min_int / -1
  and the signed remainder min_int % -1 (where min_int is the smallest
  representable signed integer) now have undefined semantics and are
  treated as "going wrong" behaviors.
  (Previously, they were defined with results min_int and 0 respectively,
  but this behavior requires unnatural code to be generated on IA32 and
  PowerPC.)

Performance improvements:
- Function inlining is now implemented.  The functions that are inlined
  are those declared "inline" in the C source, provided they are not
  recursive.
- Constant propagation is now able to propagate the initial values of
  "const" global variables.
- Added option -ffloat-const-prop to control the propagation of
  floating-point constants; see user's manual for documentation.
- Common subexpression elimination can now eliminate memory loads
  following a memory store at the same location.